--- a/finn_projj.html
+++ b/finn_projj.html
@@ -49,7 +49,7 @@
 <footer>
     <p>
 		<img src="http://www.intro-webdesign.com/images/newlogo.png" alt="new logo"><br>
-		This page was created by ye &amp; Colleen van Lent. To learn more about web design, visit
+		This page was created by Vidhi Pandya &amp; Colleen van Lent. To learn more about web design, visit
 		<a href="http://www.intro-webdesign.com">Intro to Web Design</a>
 	</p>
 </footer>
